--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.10.0",
+    "fs": "0.0.1-security",
+    "ini": "^2.0.0",
+    "regedit": "^3.0.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
