--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.10.0",
+    "dombo": "^3.2.0",
+    "global-mouse-events": "^1.0.5",
+    "native-mouse": "^1.2.0",
+    "osx-mouse": "^2.0.0",
+    "try-require": "^1.2.1",
+    "update-electron-app": "^2.0.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
