--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -20,6 +20,7 @@
     "native-mouse": "^1.2.0",
     "osx-mouse": "^2.0.0",
     "try-require": "^1.2.1",
+    "update-electron-app": "^2.0.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
