--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "release": "electron-builder"
   },
   "main": "background.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahamcorp/aham-replay-controller.git"
+  },
+  "build": {
+    "publish": [{
+        "provider": "github",
+        "owner": "patrickhahn497",
+        "repo": "ahamcorp/aham-replay-controller"
+    }]
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.10.0",
+    "electron-log": "^4.3.3",
+    "electron-updater": "^4.3.8",
     "fs": "0.0.1-security",
     "ini": "^2.0.0",
     "regedit": "^3.0.3",
