--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "compile": "electron-webpack",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
@@ -12,28 +13,29 @@
     "postuninstall": "electron-builder install-app-deps",
     "release": "electron-builder",
     "build1": "electron-builder build --win --publish never",
-    "deploy1": "electron-builder build --win --publish always"
+    "publish": "electron-builder build --win --publish always"
   },
-  "main": "background.ts",
+  "main": "./src/background.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/ahamcorp/aham-replay-controller.git"
   },
-  "build": {
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "patrickhahn497",
-        "repo": "ahamcorp/aham-replay-controller"
-      }
-    ]
+  "electronWebpack": {
+    "commonSourceDirectory": "common",
+    "main": {
+      "sourceDirectory": "main"
+    },
+    "renderer": {
+      "sourceDirectory": null
+    }
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.10.1",
-    
+    "electron-forge": "^5.2.4",
     "electron-log": "^4.3.3",
     "electron-updater": "^4.3.8",
+    "electron-webpack": "^2.8.2",
     "fs": "0.0.1-security",
     "ini": "^2.0.0",
     "regedit": "^3.0.3",
@@ -56,8 +58,9 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "electron": "^11.0.0",
-    "electron-devtools-installer": "^3.1.0",
     "electron-builder": "^22.10.5",
+    "electron-devtools-installer": "^3.1.0",
+    "electron-prebuilt": "^1.4.13",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.0",
